Version 7.2. 08 October 2018 - xxx edition

Added setting to specify configuration file
Improved vu-meters: high volumes are shown in red


Version 7.1. 24 September 2018 - 5th Anniversary edition

Yes, this is the 5th Anniversary edition, so, 5 years have passed since version 0.1: 24th September 2013 :))

Here is the changelog for version 7.1:

Added ACB/ABC/BAC/Custom AY Stereo emulation
Added joystick action to change emulated joystick type: Sinclair, Kempston, etc
Added Basic viewer for .bas basic files (plain ascii or Basic Spectrum data with tokens), .baszx80 (Basic ZX80 with tokens), .baszx81 (Basic ZX81 with tokens), Z88 basic files with tokens
Added Sped format file viewer
Added ZXUno DMA emulation. Added some dma demos to zxuno.mmc image
Added TBBlue/DataGear/MB02 DMA emulation
Added TBBlue Multiface emulation
Added TBBlue Debug menu: Sprite navigator, Video layers, Video info
Added setting to deny turbo mode on TBBlue, useful on slow machines
Added Beeper Piano Menu
Added new Z80 TBBlue opcodes and deleted obsolete ones
Added setting to change Kempston Mouse sensitivity
Added menu item to create autoconfig files (.config) 
Added setting --random-r-register to generate random value for R register on every cold start, instead of the normal 0 value. Useful to avoid same R register in the start of games, when they use that register as a random value
Added OSD Adventure Text Keyboard, useful for having typical words on Adventure Text Games (and of course any other kind of games and programs)
Added tool to export vocabulary from a PAWS/QUILL/GAC game to a list of words in the OSD Adventure Text Keyboard
Added new versions of my Sped compiler:
*Sped52en: English translation by Tim Gilberts, based on Sped52. In Sped format
*Sped53:   Fixed bug from Sped52 (object code was always saved from 49152), based on Sped52. Spanish Version. In Sped format